Bug 1780191. Avoid making primitives smaller than one pixel active. r=nical

Webrender doesn't seem to handle them well. This of course will affect the balance of making things active, but hopefully this is a good trade off.

Differential Revision: https://phabricator.services.mozilla.com/D165726