gfx/layers/wr/WebRenderCommandBuilder.cpp
@@ -1130,7 +1130,9 @@ static ItemActivity HasActiveChildren(
 }
 
 static ItemActivity AssessBounds(const StackingContextHelper& aSc,
-                                 const nsRect& aBounds) {
+                                 nsDisplayListBuilder* aDisplayListBuilder,
+                                 nsDisplayItem* aItem,
+                                 bool aHasActivePrecedingSibling) {
   // Arbitrary threshold up for adjustments. What we want to avoid here
   // is alternating between active and non active items and create a lot
   // of overlapping blobs, so we only make images active if they are
@@ -1139,14 +1141,28 @@ static ItemActivity AssessBounds(const StackingContextHelper& aSc,
   // concern.
   constexpr float largeish = 512;
 
-  float width = aBounds.width * aSc.GetInheritedScale().xScale;
-  float height = aBounds.height * aSc.GetInheritedScale().yScale;
+  bool snap = false;
+  nsRect bounds = aItem->GetBounds(aDisplayListBuilder, &snap);
 
-  if (width > largeish || height > largeish) {
-    return ItemActivity::Should;
+  float appUnitsPerDevPixel =
+      static_cast<float>(aItem->Frame()->PresContext()->AppUnitsPerDevPixel());
+
+  float width =
+      static_cast<float>(bounds.width) * aSc.GetInheritedScale().xScale;
+  float height =
+      static_cast<float>(bounds.height) * aSc.GetInheritedScale().yScale;
+
+  // Webrender doesn't handle primitives smaller than a pixel well, so
+  // avoid making them active.
+  if (width >= appUnitsPerDevPixel && height >= appUnitsPerDevPixel) {
+    if (aHasActivePrecedingSibling || width > largeish || height > largeish) {
+      return ItemActivity::Should;
+    }
+
+    return ItemActivity::Could;
   }
 
-  return ItemActivity::Could;
+  return ItemActivity::No;
 }
 
 // This function decides whether we want to treat this item as "active", which
@@ -1202,11 +1218,8 @@ static ItemActivity IsItemProbablyActive(
       if (StaticPrefs::gfx_webrender_svg_images() && aUniformlyScaled &&
           svgItem->ShouldBeActive(aBuilder, aResources, aSc, aManager,
                                   aDisplayListBuilder)) {
-        if (aHasActivePrecedingSibling) {
-          return ItemActivity::Should;
-        }
-        bool snap = false;
-        return AssessBounds(aSc, aItem->GetBounds(aDisplayListBuilder, &snap));
+        return AssessBounds(aSc, aDisplayListBuilder, aItem,
+                            aHasActivePrecedingSibling);
       }
 
       return ItemActivity::No;
